@@ -1,7 +1,15 @@
+2005-03-23  Sven Neumann  <sven@gimp.org>
+
+	* app/base/tile-swap.c (tile_swap_init): create the swap directory
+	if it doesn't exist. Will still fail if the parent directory is not
+	available. Still good enough to close bug #167506.
+
+	* app/app_procs.c: tweaked error message.
+
 2005-03-22  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/colortoalpha.c: unset "Keep transparency", it is
-	not what the user wants if this plug-in is being used.
+	not what the user wants if this plug-in is being used (bug #151910).
 
 2005-03-22  Sven Neumann  <sven@gimp.org>
 
